cabal-version:      3.6
name:               slisp
version:            0.1.0.0

synopsis:           LISP written in Haskell using the parser-S
description:        SLISP is a pure-functional LISP implementation to demonstrate the parser-S
                    .
category:           Language, Lisp
author:             Francis Lim
maintainer:         thyeem@gmail.com
license:            MIT
license-file:       LICENSE
build-type:         Simple

extra-source-files: README.md

library
    hs-source-dirs:
        src
    build-depends:
        base
      , bytestring
      , containers
      , directory
      , filepath
      , haskeline
      , pretty-simple
      , random
      , text
      , vector
      , s
    exposed-modules:
        SLisp
    default-language: Haskell2010

executable sl
    hs-source-dirs:
        app
    main-is:
        Main.hs
    build-depends:
        base
      , containers
      , directory
      , filepath
      , haskeline
      , text
      , vector
      , slisp
    default-language: Haskell2010

test-suite test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    build-tool-depends:
        hspec-discover:hspec-discover >=2.0 && <3.0
    ghc-options:
        -threaded
    build-depends:
        base
      , hspec
      , hspec-discover
      , QuickCheck
      , s
    other-modules:
        LispSpec
    default-language: Haskell2010
